[package]
name = "jwtrust"
version = "1.0.2"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "8.3.0"
sha2 = "0.10.6"
hmac = "0.12.1"
serde = {version = "1.0", features = ["derive"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]

[profile.release]
strip = true
lto = true
codegen-units = 1
# panic = "abort"