[package]
name = "jwtrust"
version = "1.0.2"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "10.0.0"
sha2 = "0.10.8"
hmac = "0.12.1"
serde = {version = "1.0.200", features = ["derive"] }

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]

[profile.release]
strip = true
lto = true
codegen-units = 1
# panic = "abort"